# opendp-num

./: .gitignore  Cargo.toml  FUZZING.md  INTEGRATION.md  README.md
benches/: backends.rs
examples/: audit_dashu_pr2801.rs  reproduce_dashu_022.rs  reproduce_dashu_023.rs  reproduce_dashu_024.rs  reproduce_dashu_025.rs  reproduce_dashu_026.rs  reproduce_dashu_027.rs  root_cause.rs  verify_fix.rs
findings/: METHODOLOGY.md  README.md  ROOT_CAUSE.md  index.json  verification.json
findings/caused-by-adapter/: README.md
findings/dashu-float/DASHU-005/: README.md
findings/dashu-float/DASHU-007/: README.md
findings/dashu-float/DASHU-011/: README.md
findings/resolved-by-adapter-fix/: README.md
findings/resolved-by-upgrade/: README.md  initial-upgrade-check.json
findings/upstream/: DASHU-008-gcd-scratchpad-panic.md  DASHU-015-to_f64-false-exact.md  DASHU-020-subnormal-primitive-double-rounding.md  DASHU-021-high-precision-dbig-debug-panic.md  DASHU-022-unlimited-zero-transcendental-panics.md  DASHU-023-upward-expm1-saturates-negative-one.md  DASHU-024-powi-range-handling.md  DASHU-024-powi-representable-exponent-boundary-panics.md  DASHU-025-powi-directed-range-saturation.md  DASHU-026-expm1-debug-range-boundary-panic.md  DASHU-026-round-fract-debug-assert-materializes-base-pow.md  DASHU-027-expm1-debug-allocation-growth.md  README.md
fuzz/: .gitignore  Cargo.toml  check_coverage.py  ci_smoke.sh  known_findings.json  opendp-num-fuzz.service  operation_manifest.json  quarantine_known.py  run_campaign.py  seed_corpus.py  summarize_reports.py  triage_findings.py  verify_backend_profiles.py  verify_findings.py  verify_raw_extremes.py  verify_upstream_dashu.py
fuzz/dictionaries/: float.dict  integer.dict  sequence.dict
fuzz/fuzz_targets/: alp_primitives.rs  backend_float_conversion.rs  backend_float_extremes.rs  conversions.rs  directed_binary.rs  directed_unary.rs  exact_integer.rs  exact_rational.rs  malachite_float.rs  opendp_sequences.rs  primitive_casts.rs
fuzz/known_inputs/: DASHU-002-sequence.input  DASHU-002.input  DASHU-007-direct.input  DASHU-007-one.input  DASHU-007.input  DASHU-008-b.input  DASHU-010-sequence.input  DASHU-012-sequence.input  DASHU-012.input  DASHU-015.input  DASHU-019.input  DASHU-020-f32-decimal.input  DASHU-020-f64-binary.input  DASHU-021-high-precision-decimal.input
fuzz/resolved_inputs/dashu-0.5.0/: DASHU-001-expm1.input  DASHU-001-sequence-add.input  DASHU-001-sub.input  DASHU-003-a.input  DASHU-003-b.input  DASHU-009.input
fuzz/src/: lib.rs  witnesses.rs
src/: capability.rs  error.rs  harness.rs  lib.rs  operation.rs  rounding.rs
src/backend/: dashu.rs  malachite.rs  mod.rs  mpfr.rs
tests/: contracts.rs
(+76 files in other folders)
